fix: switch alignment

--- a/frontend/src/styles/DisplayProperty.css
+++ b/frontend/src/styles/DisplayProperty.css
@@ -4,5 +4,5 @@ th, td {
 }
 
 .table-element {
-    text-align: center;
+    text-align: right;
 }
